# personal-site

./: .continuerules  .dockerignore  .env  .env.example  .gitignore  .mcp.json  AGENTS.md  CALIBRE-SYNC.md  CLAUDE.md  CLEANUP.md  Dockerfile  HETZNER_DEPLOYMENT_GUIDE.md  MIGRATION_PLAN.md  README.md  README_SERVER.md  TODO.md  app.py  astro.config.mjs  calibre.py  docker-compose.prod.yml  docker-compose.server.yml  docker-compose.yml  drizzle.config.ts  extensions.py  hetzner.txt  jsconfig.json  next.config.js  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  tailwind.config.js  tsconfig.json  vercel.json
amplify/: team-provider-info.json
api/: index.ts
app/: root.tsx  routes.ts
components/: book-card.jsx  book-list.jsx  cover-image.jsx  footer.jsx  form.jsx  header.js  header.jsx  hero-post.jsx  image.jsx  image.module.css  intro.jsx  markdown-styles.module.css  meta.jsx  nft-card.jsx  photo-album.jsx  post-header.jsx  post-title.jsx
data/: profile.py
flask-app/: .env.example  .gitignore  README.md  config.py  pyproject.toml  requirements.txt
flask-app/models/: book.py  user.py
flask-app/routes/: __init__.py  api.py
flask-app/static/js/: app.js
flask-app/templates/: base.html
flask-app/templates/admin/: books.html
lib/: airtable.js  api.js  constants.js  ethereum.js  flickr.js  form-handler.js  nfts.js  readwise.js  solana.js  solana.mjs
migrations/: export_supabase_books.js  import_books.py
models/: __init__.py
pages/: _document.jsx  about.jsx  bio.jsx  index.jsx
public/: _headers  _redirects  robots.txt
(+237 files in other folders)
