[project]
name = "personal-site"
version = "1.0.0"
description = "Clay Coffman Personal Site - Flask Version"
requires-python = ">=3.11"
authors = [
    {name = "Clay Coffman", email = "claymcoffman@gmail.com"}
]
dependencies = [
    "flask==3.0.0",
    "flask-sqlalchemy==3.1.1",
    "flask-login==0.6.3",
    "python-dotenv==1.0.0",
    "werkzeug==3.0.1",
    "gunicorn==21.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = []
